--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <p>Hello 大家好</p>
 <p>我是小夜，这是我的个人网站。 </p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
+<p>很高兴你来到这里, 你可以在以下的网站找到我（实际上你找不到我，下面两个都是百度的链接）</p>
 
 <ul>
   <li> <a href="https://www.zhihu.com/people/AJLoveChina">小夜</a> </li>
